# srrl

./: .gitignore  Cargo.toml  README.md  savegame.json
.github/: CODEOWNERS
assets/: map.txt
assets/raws/: base_attributes.json  item.json  job.json  job_table.json
assets/scenes/: load_scene_example-new.scn.ron  load_scene_example.scn.ron  save.srrl
assets/temp_tiles/2D_TOPDOWN_TILES/: base_char_64.aseprite  base_floor_64.aseprite  base_ghoul_64.aseprite  base_tile_64.aseprite  base_wall_64_mask_0.aseprite
book/: book.toml
book/src/: SUMMARY.md  basic_lexic.md  credits.md  design.md  field_of_vision.md  ia.md  introduction.md  map_generation_process.md  notes_archi.md  stories.md  tech_notes.md  tiles.md
book/src/questionnement/: field_of_vision.md
book/src/retro/: maturité.md  release_0_4.md
raws/: base_attributes.json  job.json  kind.csv  kind.json  models.csv  skills.csv  spawn_table.json  stats.csv
src/: ascii.rs  audio.rs  camera.rs  commons.rs  components.rs  globals.rs  gui.rs  main.rs  mainmenu.rs  map.rs  player.rs  save_load_system.rs  saveload_system.rs  spawner.rs  states.rs  tilemap.rs  victory.rs
src/Engine/: mod.rs  save_load_system.rs  states.rs
src/Engine/animations/: events.rs  mod.rs
src/Engine/asset_loaders/: audio_resources.rs  graphic_resources.rs  mod.rs
src/Engine/audios/: mod.rs
src/Engine/render/: components.rs  cursor_render.rs  mod.rs  pieces_render.rs  tilemap_render.rs
src/asset_loaders/: ascii.rs  audio_resources.rs  graphic_resources.rs  mod.rs
src/audios/: components.rs  mod.rs
src/credits/: pathfinding.txt
src/ecs_elements/: mod.rs
src/ecs_elements/components/: characters.rs  combat.rs  menus.rs  mod.rs  movements.rs  text.rs  tiles.rs
src/ecs_elements/resources/: assets.rs  mapgen.rs  menus.rs  mod.rs  save.rs  sounds.rs  states.rs
src/engine/: mod.rs
src/engine/animations/: animation_systems.rs  display_text.rs  events.rs  mod.rs
src/engine/asset_loaders/: graphic_resources.rs  mod.rs
src/engine/audios/: components.rs
src/engine/render/: components.rs  cursor_render.rs  pieces_render.rs
src/game/: commons.rs  gamelog.rs  gameover.rs  mod.rs  npc.rs  player.rs  spawners.rs  states.rs  tilemap.rs  victory.rs
src/game/combat/: mod.rs  (+9 more)
src/map_builders/: commons.rs  components.rs  map.rs  mod.rs  pathfinding.rs  rectangle.rs  room_based_exits.rs  room_based_spawner.rs  room_based_starting_position.rs  sewer_map.rs  simple_map.rs  tilemap.rs
src/menu_builders/: components.rs  mod.rs
src/menus/: components.rs  gameover.rs  ingamemenu.rs  mainmenu.rs  menus_input.rs  mod.rs  victory.rs
src/raws/: base_attributes_structs.rs  item_structs.rs  job_table_structs.rs  jobs_structs.rs  kind_structs.rs  mod.rs  raw_master.rs  spawn_table_structs.rs
src/render/: ascii.rs  assets.rs  components.rs  cursor_render.rs  graphic_resources.rs  mod.rs  pieces.rs  pieces_render.rs  tilemap_render.rs
src/spatial/: mod.rs
src/vectors/: mod.rs  pathfinder.rs
(+122 files in other folders)
