[package]
name = "sr-rl"
version = "0.9.0-release-0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[target.x86_64-pc-windows-msvc]
#rustflags = ["-Ctarget-feature=+crt-static"]

[dependencies]

#bevy-inspector-egui= "0.18.1" #Waiting for bevy 0.11 & support
# bevy = "0.11"
#bevy            = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy            = { git = "https://github.com/bevyengine/bevy?rev=03331b9bd36d1b742e1e9fa35a3764bef03b5bf0"}

pathfinding     = "4.2.1"
serde           = "^1"
serde_json      = "1"
rand            = "0.8.0" # 0.8.5 is up!

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1