[package]
name = "sr-rl"
version = "0.15.0"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.x86_64-pc-windows-msvc]
rustflags = ["-Ctarget-feature=+crt-static"]

[dependencies]

#bevy-inspector-egui= "0.18.1" #Waiting for bevy 0.11 & support
bevy = "0.12"
#bevy            = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }

pathfinding     = "4.2.1"
serde           = "^1"
serde_json      = "1"
rand            = "0.8.0" # 0.8.5 is up!

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1