[package]
name = "sr-rl"
version = "0.19.0"
edition = "2021"
rust-version = "1.76"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.x86_64-pc-windows-msvc]
rustflags = ["-Ctarget-feature=+crt-static"]

[dependencies]

bevy-inspector-egui= "0.23.4" 
egui ="*"
bevy = "0.13"
#bevy            = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
serde           = "^1"
serde_json      = "1"
rand            = "0.8.0" 
bresenham = "0.1.0"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1

[patch.crates-io]
#wgpu = { git = "https://github.com/gfx-rs/wgpu" , rev = "3d10678a91b78557b0dea537407eb4a4ff754872" } #https://github.com/bevyengine/bevy/issues/4461#issuecomment-1097560344